<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    tools:context=".DistractionTitle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/DistractionTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distractiontitletitle"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            style="@style/MediumTextTitle"
            />

        <Button
            android:id="@+id/BubblesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/DistractionTitleText"
            android:layout_marginTop="100dp"
            android:onClick="OptionSelect"
            android:text="@string/bubbles" />

        <Button
            android:id="@+id/AmbientButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/BubblesButton"
            android:layout_marginTop="10dp"
            android:onClick="OptionSelect"
            android:text="@string/ambient" />

        <Button
            android:id="@+id/MathButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/AmbientButton"
            android:layout_marginTop="10dp"
            android:onClick="OptionSelect"
            android:text="@string/math_button" />

        <Button
            android:id="@+id/ExerciseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/MathButton"
            android:layout_marginTop="10dp"
            android:onClick="OptionSelect"
            android:text="@string/exercise_button" />

        <Button
            android:id="@+id/EncouragementButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ExerciseButton"
            android:layout_marginTop="10dp"
            android:onClick="OptionSelect"
            android:text="@string/encouragements_button" />








    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>