<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    tools:context=".DistractionInput">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/ExerciseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_title"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            style="@style/MediumTextTitle"
            />

        <Button
            android:id="@+id/Exercise1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ExerciseTitle"
            android:layout_marginTop="100dp"
            android:text="@string/exercise1"
            android:onClick="clickExercise"/>

        <Button
            android:id="@+id/Exercise2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Exercise1"
            android:layout_marginTop="50dp"
            android:text="@string/exercise2"
            android:onClick="clickExercise"/>

        <Button
            android:id="@+id/Exercise3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Exercise2"
            android:layout_marginTop="50dp"
            android:text="@string/exercise3"
            android:onClick="clickExercise"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>